[Feat] 광원 TRISTIMULUS 검토, 색 ENUM 검토 및 Redis 세팅